testdata/golden/hir_borrow/invalid/move_forbidden_when_borrowed.sg
fn t() {
    let x: string = "hi";
    let r: &string = &x;
    let y: string = x;
}

